--- a/RiotAPI.Learning/Properties/launchSettings.json
+++ b/RiotAPI.Learning/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:53727",
-      "sslPort": 44345
+      "applicationUrl": "http://localhost:51964/",
+      "sslPort": 44387
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "RiotAPI.Learning": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
